[package]
name = "fdsbml"
version = "0.1.0"
authors = ["carrascomj <carrascomurielj@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1"
termcolor="1.1.2"
atty="0.2"
libflate="1.1.0"
rust_sbml = {version="0.5", default_features=false}
